--- a/src/app/pages/EVALUACIONES/quiz/quiz.component.html
+++ b/src/app/pages/EVALUACIONES/quiz/quiz.component.html
@@ -5,6 +5,14 @@
     <div class="orbe" style="--index: 3"></div>
     <div class="orbe" style="--index: 4"></div>
 </div>
+<div class="timer">
+    <p>
+      <span id="days"></span> dias /
+      <span id="hours"></span> horas /
+      <span id="minutes"></span> minutos /
+      <span id="seconds"></span> segundos
+    </p>
+</div>
 <div class="row">
     <div class="col-lg-12">
         <div *ngIf="!isLoading" class="card ">
