--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -20,7 +20,7 @@
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                     <li class="dropdown-header">
                         <h6>{{ nombre }} {{ apellido }}</h6>
-                        <span>{{ cargo }}</span>
+                        <span id="elementos"></span>
                     </li>
                     <li>
                         <hr class="dropdown-divider">
