--- a/src/app/pages/COLABORADORES/datatable/dtcolaboradores/datatable.component.html
+++ b/src/app/pages/COLABORADORES/datatable/dtcolaboradores/datatable.component.html
@@ -1,9 +1,17 @@
 
 <div class="container table-responsive">
-    <div class="d-flex justify-content-end mb-2">
-        <button type="button" class="btn btn-primary " routerLink="/dashboard/collaborator">
-            <i class="bi bi-plus-lg"></i>Agregar colaborador
-        </button>
+    <div class="d-flex justify-content-between">
+        <div>
+            <label for="">Filtro de búsqueda</label>
+            <div class="d-flex justify-content-start mb-2">
+                <input type="text" (keyup)="busqueda($event)">
+            </div>
+        </div>
+        <div class="mb-2">
+            <button type="button" class="btn btn-primary" routerLink="/dashboard/collaborator">
+                <i class="bi bi-plus-lg"></i>Agregar colaborador
+            </button>
+        </div>
     </div>
     <div class="mx-auto loader" *ngIf="isLoading">
         <div class="orbe" style="--index: 0"></div>
@@ -12,26 +20,25 @@
         <div class="orbe" style="--index: 3"></div>
         <div class="orbe" style="--index: 4"></div>
     </div>
-    <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
+    <table id="tabla" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
         <thead>
             <tr>
                 <th>N°</th>
                 <th>Nombre completo</th>
                 <th>Oficina</th>
-                <th>Departamento</th>
-                <th>Cargo</th>
+                <th>Departamentos</th>
+                <th>Cargos</th>
                 <th>Último ingreso</th>
                 <th>Acciones</th>
-
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of listaColaborador">
-                <td>{{ item.id }}</td>
+            <tr *ngFor="let item of listaColaborador; let i = index;">
+                <td>{{ i + 1 }}</td>
                 <td>{{ item.nombres }} {{item.apellidos}}</td>
                 <td>{{ item.agencia }}</td>
-                <td>{{ item.departamento }}</td>
-                <td>{{ item.cargo }}</td>
+                <td>{{ item.departamentos }}</td>
+                <td>{{ item.cargos }}</td>
                 <td>{{ item.fechaSalida }}</td>
                <td style="text-align: center;">
                     <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
@@ -44,6 +51,9 @@
                       <i class="bi bi-lock-fill" style="font-size: 1rem; color: rgb(255, 174, 0);"></i>
                     </a>
                 </td>
+            </tr>
+            <tr *ngIf="listaColaborador.length === 0">
+                <td colspan="7" style="text-align: center;">No hay registros</td>
             </tr>
         </tbody>
     </table>
