--- a/src/app/pages/DOCUMENTO/datatable/dtdocumentos/dtdocumentos.component.html
+++ b/src/app/pages/DOCUMENTO/datatable/dtdocumentos/dtdocumentos.component.html
@@ -38,10 +38,10 @@
                     <!-- <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Permisos" [routerLink]="['/dashboard/permisos', item.id]">
                         <i class="bi bi-shield-check" style="font-size: 1rem; color: rgb(252, 196, 13);"></i>
                     </a> -->
-                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/documentos', item.id]">
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/documentos', item.id]" *ngIf="item.colaborador_id == id">
                         <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(3, 174, 253);"></i>
                     </a>
-                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)" *ngIf="item.colaborador_id == id">
                         <i class="bi bi-trash" style="font-size: 1rem; color: rgb(253, 53, 3);"></i>
                     </a>
                 </td>
