--- a/src/app/pages/DOCUMENTO/documentos/documentos.component.html
+++ b/src/app/pages/DOCUMENTO/documentos/documentos.component.html
@@ -63,44 +63,91 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="mt-4" style="text-align: center;">Listado de colaboradores que tendrán acceso</h5>
-                        <div class="col-md-12 mb-2 mt-4">
-                            <form [formGroup]="formPermisos" class="row g-3 ">
+                        <div class="row">
+                            <div class="col-md-4 mb-2 mt-4">
+                                <h5 class="mt-4" style="text-align: center;">Departamentos</h5>
+                                <form [formGroup]="formPermisos" class="row g-3 ">
 
-                                <div class="mx-auto loader" *ngIf="isLoading">
-                                    <div class="orbe" style="--index: 0"></div>
-                                    <div class="orbe" style="--index: 1"></div>
-                                    <div class="orbe" style="--index: 2"></div>
-                                    <div class="orbe" style="--index: 3"></div>
-                                    <div class="orbe" style="--index: 4"></div>
-                                </div>
+                                    <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
+                                        <thead>
+                                            <tr>
+                                                <th>N°</th>
+                                                <th style="display: none;">N°</th>
+                                                <th>Departamentos</th>
+                                                <th>Dar acceso</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of listaDepartamentos; let i = index;">
+                                                <td>{{ i + 1 }}</td>
+                                                <td class="depart" style="display: none;">{{ item.id }}</td>
+                                                <td >{{ item.nombre }}</td>
+                                                <td>
+                                                    <input id="inputCheck" type="checkbox" [checked]="isSelected(item.id)" (change)="onCheckboxChange(item.id)" (change)="handleCheckboxChange($event)"  [checked]="datos.includes(item.id)" formControlName="check">
+                                                </td>
+                                            </tr>
+                                            <tr *ngIf="listaDepartamentos.length === 0">
+                                                <td colspan="3" style="text-align: center;">No hay registros</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </form>        
+                            </div>
+                            <div class="col-md-4 mb-2 mt-4">
+                                <h5 class="mt-4" style="text-align: center;">Cargos</h5>
+                                <form [formGroup]="formPermisos" class="row g-3 ">
 
-                                <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
-                                    <thead>
-                                        <tr>
-                                            <th>N°</th>
-                                            <th style="display: none;">N°</th>
-                                            <th>Nombre del colaborador</th>
-                                            <th>Agencia</th>
-                                            <th>Cargo</th>
-                                            <th>Dar acceso</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let item of listaColaboradores; let i = index;">
-                                            <td>{{ i + 1 }}</td>
-                                            <td class="user" style="display: none;">{{ item.id }}</td>
-                                            <td >{{ item.nombres }} {{ item.apellidos}}</td>
-                                            <td >{{ item.agencia }} </td>
-                                            <td >{{ item.cargo }} </td>
-                                            <td><input id="inputCheck" type="checkbox" [checked]="isSelected(item)" (change)="onCheckboxChange(item)" (change)="handleCheckboxChange($event)"  [checked]="datos.includes(item.id)" formControlName="check"></td>
-                                        </tr>
-                                        <tr *ngIf="listaColaboradores.length === 0">
-                                            <td colspan="5" style="text-align: center;">No hay registros</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </form>        
+                                    <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover">
+                                        <thead>
+                                            <tr>
+                                                <th>N°</th>
+                                                <th style="display: none;">N°</th>
+                                                <th>Cargos</th>
+                                                <th>Dar acceso</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of listaCargos; let i = index;">
+                                                <td>{{ i + 1 }}</td>
+                                                <td class="cargo" style="display: none;">{{ item.id }}</td>
+                                                <td >{{ item.nombre }}</td>
+                                                <td><input id="inputCheck" type="checkbox" [checked]="isSelected1(item.id)" (change)="onCheckboxChange1(item.id)" (change)="handleCheckboxChange1($event)"  [checked]="datos1.includes(item.id)" formControlName="check"></td>
+                                            </tr>
+                                            <tr *ngIf="listaCargos.length === 0">
+                                                <td colspan="4" style="text-align: center;">No hay registros</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </form>        
+                            </div>
+                            <div class="col-md-4 mb-2 mt-4">
+                                <h5 class="mt-4" style="text-align: center;">Colaboradores</h5>
+                                <form [formGroup]="formPermisos" class="row g-3 ">
+
+
+                                    <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions2" [dtTrigger]="dtTrigger2" class="table table-striped table-bordered row-border hover">
+                                        <thead>
+                                            <tr>
+                                                <th>N°</th>
+                                                <th style="display: none;">N°</th>
+                                                <th>Colaboradores</th>
+                                                <th>Dar acceso</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of listaColaboradores; let i = index;">
+                                                <td>{{ i + 1 }}</td>
+                                                <td class="user" style="display: none;">{{ item.id }}</td>
+                                                <td >{{ item.nombres }} {{ item.apellidos}}</td>
+                                                <td><input id="inputCheck" type="checkbox" [checked]="isSelected2(item.id)" (change)="onCheckboxChange2(item.id)" (change)="handleCheckboxChange2($event)"  [checked]="datos2.includes(item.id)" formControlName="check"></td>
+                                            </tr>
+                                            <tr *ngIf="listaColaboradores.length === 0">
+                                                <td colspan="4" style="text-align: center;">No hay registros</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </form>        
+                            </div>
                         </div>
                     </div>
                 </div>
